--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -168,5 +168,12 @@
     "/assets/js/tinymce/themes/silver/theme.min.js": "/assets/js/tinymce/themes/silver/theme.min.js",
     "/assets/js/tinymce/tinymce.d.ts": "/assets/js/tinymce/tinymce.d.ts",
     "/assets/js/tinymce/tinymce.js": "/assets/js/tinymce/tinymce.js",
-    "/assets/js/tinymce/tinymce.min.js": "/assets/js/tinymce/tinymce.min.js"
+    "/assets/js/tinymce/tinymce.min.js": "/assets/js/tinymce/tinymce.min.js",
+    "/assets/fonts/Raleway-Black.ttf": "/assets/fonts/Raleway-Black.ttf",
+    "/assets/fonts/Raleway-Bold.ttf": "/assets/fonts/Raleway-Bold.ttf",
+    "/assets/fonts/Raleway-ExtraBold.ttf": "/assets/fonts/Raleway-ExtraBold.ttf",
+    "/assets/fonts/Raleway-Light.ttf": "/assets/fonts/Raleway-Light.ttf",
+    "/assets/fonts/Raleway-Medium.ttf": "/assets/fonts/Raleway-Medium.ttf",
+    "/assets/fonts/Raleway-Regular.ttf": "/assets/fonts/Raleway-Regular.ttf",
+    "/assets/fonts/Raleway-SemiBold.ttf": "/assets/fonts/Raleway-SemiBold.ttf"
 }
