Added in DataTables to be used throughout the application, added AdminClientController, amended the user model, added in userDetails model and migration, amended the user migration to add status, added in custom styles for (body, colours, pagehero, pageActionsBanner, pagemain), added in responsive stylesheets (not required yet), added in required routes and other styling and files related to the admin area structure.

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "monarobase/country-list": "^3.4",
         "realrashid/sweet-alert": "^7.0",
         "spatie/laravel-permission": "^5.10",
         "tinymce/tinymce": "^6.4"
