--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/ui": "^4.2",
         "monarobase/country-list": "^3.4",
         "realrashid/sweet-alert": "^7.0",
+        "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-permission": "^5.10",
         "tinymce/tinymce": "^6.4"
     },
