--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.56.1",
         "sass-loader": "^12.6.0"
+    },
+    "dependencies": {
+        "datatables.net-dt": "^1.13.4"
     }
 }
