--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -8,6 +8,7 @@
     "/assets/css/client.css": "/assets/css/client.css",
     "/assets/css/admin.css": "/assets/css/admin.css",
     "/assets/css/app.css": "/assets/css/app.css",
+    "/assets/css/loginpage.css": "/assets/css/loginpage.css",
     "/assets/webfonts/fa-brands-400.ttf": "/assets/webfonts/fa-brands-400.ttf",
     "/assets/webfonts/fa-brands-400.woff2": "/assets/webfonts/fa-brands-400.woff2",
     "/assets/webfonts/fa-regular-400.ttf": "/assets/webfonts/fa-regular-400.ttf",
